--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World!
+<!DOCTYPE html>
+<hmtl>
+    <head>
+        <meta charset="utf-8">
+        <title>Test</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="wrapper">
+            <article class="img-info">
+                <h2>Test</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam accumsan erat non metus tincidunt, quis dignissim ligula eleifend. Suspendisse dignissim eros tortor, eu rhoncus ipsum semper sed. Nunc sit amet elit a augue semper consectetur id nec lorem. Ut vitae efficitur dui. Integer dapibus ultrices tellus, ut sollicitudin felis mattis varius. Phasellus vel eros ultrices, pharetra mauris tincidunt, maximus dolor. Cras elementum velit id libero elementum, vel tempor libero venenatis. In fermentum mi eu tellus finibus molestie. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis feugiat lectus, vel pretium nisl.
+                </p>
+            </article>
+        </div>
+    </body>
+</hmtl>
