Added profile pic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body>
         <div class="wrapper">
+            <img class="profilePic" src="img/banner.png">
+
             <article class="img-info">
                 <h2>Test</h2>
                 <p>
