Fix error with profile pic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <img class="profilePic" src="img/banner.png">
+            <img class="profilePic" src="img/profilepic.png">
 
             <article class="img-info">
                 <h2>Test</h2>
